--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -110,6 +110,7 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
+  font-size: 1.5rem;
 
   @include breakpoint($large) {
     display: block;
@@ -165,6 +166,8 @@
   z-index: 10;
   position: relative;
   cursor: pointer;
+  font-size: 1.3rem;
+  margin-top: 10%;
 
   li:last-child {
     a {
