[ADD] Added teaching sessions

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,12 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+
+.large-table {
+  font-size: 1em;
+}
+
+.large-table th, .large-table td {
+  padding: 0.5em 0.8em;
+}
